# libhangul

data/hanja/: emoticon.txt  hanjac.txt  merge.py  reverse-hanja.py
debian/: changelog  control  copyright  libhangul-data.install  libhangul1.lintian-overrides  libhangul1.symbols  postinst  prerm  rules  watch
debian/keyboards/: 3set_3moa-semoe-2016.txt  3set_3moachigi-2015.txt  3set_3shin-2015.txt  3set_3shin-p-yet.txt  3set_3shin-p.txt
debian/source/: include-binaries
hangul/: Makefile.am  hangul.h  hangulctype-addon.c  hangulctype-addon.h  hangulctype.c  hangulinputcontext-addon.h  hangulinputcontext-def.h  hangulinputcontext.c  hangulinputcontext.h  hangulkeyboard-addon.h  hangulkeyboard.h  hanja.c
po/: POTFILES.in  ko.po
